gitignore adds node_modules

--- a/section04/package.json
+++ b/section04/package.json
@@ -9,5 +9,8 @@
     "start-server": "node app.js"
   },
   "author": "Tanner Roberts",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^2.0.15"
+  }
 }
