--- a/package.json
+++ b/package.json
@@ -15,22 +15,18 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.3",
+    "body-parser": "^1.19.1",
     "connect-flash": "^0.1.1",
-    "connect-mongodb-session": "^2.0.3",
+    "connect-mongodb-session": "^2.4.1",
     "cors": "^2.8.5",
-    "csurf": "^1.9.0",
-    "ejs": "^2.6.1",
-    "express": "^4.16.3",
-    "express-handlebars": "^3.0.0",
-    "express-session": "^1.15.6",
-    "express-validator": "^5.3.0",
-    "mongodb": "^3.1.6",
-    "mongoose": "^5.2.17",
-    "mysql2": "^1.6.1",
-    "nodemailer": "^4.6.8",
-    "nodemailer-sendgrid-transport": "^0.2.0",
-    "pug": "^2.0.3",
-    "sequelize": "^5.0.0-beta.11"
+    "csurf": "^1.11.0",
+    "ejs": "^2.7.4",
+    "express": "^4.17.2",
+    "express-session": "^1.17.2",
+    "express-validator": "^5.3.1",
+    "mongodb": "^3.7.3",
+    "mongoose": "^5.13.14",
+    "nodemailer": "^4.7.0",
+    "nodemailer-sendgrid-transport": "^0.2.0"
   }
 }
